--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,7 @@
   font-family: "NukinakoMochiRegFont";
   src: url("./fonts/NuKinakoMochi-Reg.otf") format("opentype")
 }
+
+.normal-font{
+  font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック',YuGothic,'Yu Gothic','メイリオ', Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
+}
